# atom-rendering-engine

./: .gitignore  Cargo.toml  ENGINE-INTEGRATION.md  LICENSE-HISTORY.md  README.md
.github/workflows/: ci.yml
docs/: DEVELOPER_GUIDE.md
pmre-kit/: Cargo.toml
pmre-kit/src/: bloom_sweep.rs  css.rs  fair_queue.rs  font.rs  framebuffer.rs  geom.rs  html.rs  ir.rs  layout.rs  lib.rs  paint.rs  path.rs  post.rs  raster.rs  style.rs  text.rs  ux.rs
pmre-orchestrator/: Cargo.toml
pmre-orchestrator/examples/: app.rs  bench.rs  cpu_profile.rs  demo.rs  gradients.rs  html.rs  ordo.rs  paths.rs  sweep.rs  ui.rs  uxi.rs
pmre-orchestrator/src/: gpu_bloom.rs  lib.rs
