[package]
name = "pmre-orchestrator"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "The single orchestrator: all policy, no mechanism. Drives the kit."

[dependencies]
pmre-kit = { path = "../pmre-kit" }

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "app"
path = "examples/app.rs"

# No dependencies anywhere. The live window (examples/app.rs) calls the OS windowing API
# directly via raw FFI (user32/gdi32) instead of a wrapper crate, so the whole workspace —
# library and examples — depends on zero external crates.
