[package]
name = "pmre-orchestrator"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "The single orchestrator: all policy, no mechanism. Drives the kit."

[dependencies]
pmre-kit = { path = "../pmre-kit" }
wgpu     = "22"
pollster = "0.3"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "app"
path = "examples/app.rs"

[[example]]
name = "ordo"
path = "examples/ordo.rs"

[[example]]
name = "bloom"
path = "examples/bloom.rs"

[[example]]
name = "bench"
path = "examples/bench.rs"

# No dependencies anywhere. The live window (examples/app.rs) calls the OS windowing API
# directly via raw FFI (user32/gdi32) instead of a wrapper crate, so the whole workspace —
# library and examples — depends on zero external crates.
